# gmail-manager

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  Dockerfile  README.md  app_config.py  cloud_secrets.py  cloudbuild.yaml  config.example.yaml  gmail_manager.py  init_rules_usage.py  pagination_fetcher.py  pyproject.toml  report.py  rule_matcher.py  rules_usage.py  table_formatter.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/integration/: integration-test-config.yaml  test_archival.py
